--- a/ibm.ipynb
+++ b/ibm.ipynb
@@ -8,8 +8,12 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['KAGGLE_USERNAME'] = \"sriramkarthickk\"\n",
-    "os.environ['KAGGLE_KEY'] = \"498d9367562336e1b9076a3c240575eb\"\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "kaggle_user=os.getenv('KAGGLE_USER')\n",
+    "kaggle_key=os.getenv('KAGGLE_KEY')\n",
+    "os.environ['KAGGLE_USERNAME'] = kaggle_user\n",
+    "os.environ['KAGGLE_KEY'] = kaggle_key\n",
     "\n",
     "from kaggle.api.kaggle_api_extended import KaggleApi\n",
     "api = KaggleApi()\n",
@@ -729,7 +733,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -743,7 +747,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+   }
   }
  },
  "nbformat": 4,
